Assorted updates to the web site

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -38,6 +38,11 @@
 
       </section>
       <footer>
+        <a href="https://numorian.com"><img src="{{ "/assets/Logo.512-black-on-white.png" | relative_url }}" alt="Numorian" width="50px" style="vertical-align:middle" />
+        <span style="vertical-align:middle">Numorian</span></a>
+        <p>yawast-ng is proudly supported by Numorian.</p>
+        
+
         <p><small>&copy; 2025 Adam Caudill - See <a href="https://github.com/Numorian/yawast-ng/blob/main/LICENSE">license</a> for details.</small></p>
       </footer>
     </div>
